Index page changes

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,7 +1,25 @@
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css);
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 
 body {
-    font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.logo {
+    font-family: Raleway, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.logo:before {
+    content: "eLecture"
+}
+
+.btn {
+    padding: 8px 24px;
+    border-radius: 2px;
+}
+
+.modal-content {
+    border-radius: 2px
 }
 
 .btn-outline-primary {
