--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -22,6 +22,14 @@ body {
     border-radius: 2px
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+}
+
 .btn-outline-primary {
     color: #0275d8;
     background-image: none;
