--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -30,6 +30,11 @@ body {
     background-color: #f5f5f5;
 }
 
+.btn-inline {
+    padding: 6px 24px;
+    border-radius: 2px
+}
+
 .btn-outline-primary {
     color: #0275d8;
     background-image: none;
